[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bingo.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CooperHewitt-Semibold-30.tres" type="DynamicFont" id=2]
[ext_resource path="res://SFX/bad.ogg" type="AudioStream" id=3]
[ext_resource path="res://SFX/good.ogg" type="AudioStream" id=4]

[node name="Bingo" type="Node2D"]
script = ExtResource( 1 )
color_pallete = [ Color( 0.976471, 0.254902, 0.266667, 1 ), Color( 0.309804, 0.505882, 0.976471, 1 ), Color( 0.65098, 0.976471, 0.254902, 1 ), Color( 0.615686, 0.254902, 0.976471, 1 ), Color( 0.972549, 0.976471, 0.254902, 1 ), Color( 0.254902, 0.976471, 0.909804, 1 ), Color( 0.901961, 0.254902, 0.976471, 1 ), Color( 0.976471, 0.560784, 0.254902, 1 ), Color( 0, 0, 0, 1 ), Color( 0.439216, 0.439216, 0.439216, 1 ) ]
time_between_extraction = 0.4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BallPathStart" type="Control" parent="CanvasLayer"]
anchor_left = 1.2
anchor_top = 0.2
anchor_right = 1.2
anchor_bottom = 1.0

[node name="BallPathEnd" type="Control" parent="CanvasLayer"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="CardContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="ButtonContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 315.0
margin_right = 1024.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/ButtonContainer"]
margin_left = 459.0
margin_right = 564.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = " PLAY "

[node name="ExtractionTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="MarkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
pitch_scale = 1.1

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ButtonContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="ExtractionTimer" to="." method="_on_ExtractionTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
